samples/_failures_safe/1761401066_6ddcfc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_07dc24d0.c: In function ‘main’:
./samples/SAFE/__tmp_07dc24d0.c:177:5: error: expected declaration or statement at end of input
  177 |     }
      |     ^
